# ft_insight

./: .gitignore  README.md  pyproject.toml
ft_insight/: app.py  create_assistant.py  main.py
ft_insight/files/: merged_part_01.txt  merged_part_02.txt  merged_part_03.txt  merged_part_04.txt  merged_part_05.txt  merged_part_06.txt  merged_part_07.txt  merged_part_08.txt  merged_part_09.txt  merged_part_10.txt
ft_insight/scraper/: investigate.py  scraper.py
ft_insight/streamlit/: app.py
ft_insight/utils/: merge.py  utils.py
ftgpt/: site_scraper.py  utils.py
