[tool.poetry]
name = "ftgpt"
version = "0.1.0"
description = ""
authors = ["Niklas Alexander Shern <nashern@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
tqdm = "^4.66.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
